--- a/package.json
+++ b/package.json
@@ -44,5 +44,5 @@
   "devDependencies": {
     "gh-pages": "^6.3.0"
   },
-  "homepage": "https://nasirrasheed.github.io/saas-project"
+  "homepage": "."
 }
