--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "framer-motion": "^12.9.2",
+    "lucide-react": "^0.503.0",
     "marked": "^15.0.11",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
